--- a/src/Components/BodySection/BodySection.css
+++ b/src/Components/BodySection/BodySection.css
@@ -3,7 +3,7 @@
     flex-direction: column;
     gap: 2rem;
     height: 100%;
-    padding: 0rem 1rem;
+    padding: 0.5rem;
     width: 100%;
     margin-bottom: 3rem;
 }
@@ -48,13 +48,16 @@
     margin-top: 2rem;
     gap: 1rem;
     display: flex;
-    justify-content: space-evenly;
+    justify-content:space-evenly;
     height: 100%;
     
     flex-wrap: wrap;
     
 }
 @media screen and (max-width: 480px){
+    .bodySection{
+        padding: 3px;
+    }
     .catContainerDiv{
         display: flex;
         flex-direction: column-reverse;
@@ -81,13 +84,13 @@
     margin-top: 2rem;
     width: 100%;
     padding: 0;
-    margin: 0; 
-    row-gap: 0.5rem;
-    column-gap: 0;
+    margin: auto; 
+    gap: 1rem;
+    
     display: flex;
     flex-wrap: wrap;
     height: 100%;
-    justify-content: space-evenly;
+    justify-content: stretch;
     
     
 }
