--- a/src/ProductsCardItem/ProductsCardItem.css
+++ b/src/ProductsCardItem/ProductsCardItem.css
@@ -18,6 +18,7 @@
     object-fit: contain;
     border-top-right-radius: 5px;
     border-top-left-radius: 5px;
+    overflow: hidden;
 }
 .cardItemBotom{
     display: flex;
@@ -59,7 +60,7 @@
     background-color: white;
     border-radius: 5px;
    height: 100%;
-   width: 170px;
+   width: 160px;
     
     
 }
