--- a/src/Components/Footer/Footer.css
+++ b/src/Components/Footer/Footer.css
@@ -16,6 +16,7 @@
     display: flex;
     flex-direction: column;
     gap: 0.5rem;
+    
 
 }
 .item>h3{
@@ -50,10 +51,19 @@
 @media screen and (max-width: 480px){
     .footer{
         height: 100%;
+        padding-right: 10px;
+        padding-left:10px;
+       
+
     }
     .footer-top{
         display: flex;
-        flex-direction: column;
+        width: 100%;
+        flex-wrap: wrap;
         height: 100%;
+         justify-content: flex-start;
+    }
+    .item{
+        width: 40%;
     }
 }
