--- a/src/ProductsCardItem/ProductsCardItem.css
+++ b/src/ProductsCardItem/ProductsCardItem.css
@@ -2,7 +2,7 @@
     display: flex;
     flex-direction: column;
     gap: 10px;
-    width: 14rem;
+    width: 15rem;
     height: 22rem;
     background-color: white;
     border-radius: 5px;
@@ -13,8 +13,8 @@
     width: 100% !important;
 }
 .card-ItemTop>img{
-    width: 100% !important;
-    height: 14rem;
+    width: 15rem !important;
+    height: 15rem;
     object-fit: contain;
     border-top-right-radius: 5px;
     border-top-left-radius: 5px;
@@ -23,6 +23,7 @@
 .cardItemBotom{
     display: flex;
     flex-direction: column;
+    
     gap: 10px;
     padding: 0px 10px;
     
